--- a/sunline/goods/templates/goods/catalog.html
+++ b/sunline/goods/templates/goods/catalog.html
@@ -69,32 +69,32 @@
                     <label class="" for="flexRadioDefault1">Default</label>
                   </div>
                   <div class="">
-                    <input class="" type="radio" name="on_type" id="RadioDefault2" value="collars_harness" {% if request.GET.on_type == 'dining_Kitchen' %}checked{% endif %} />
+                    <input class="" type="radio" name="on_type" id="RadioDefault2" value="collars_harness" {% if request.GET.on_type == 'collars_harness' %}checked{% endif %} />
                     <label class="" for="flexRadioDefault2">Collars and Harness</label>
                   </div>
                   <div class="">
-                    <input class="" type="radio" name="on_type" id="RadioDefault3" value="food" {% if request.GET.on_type == 'table' %}checked{% endif %} />
+                    <input class="" type="radio" name="on_type" id="RadioDefault3" value="food" {% if request.GET.on_type == 'food' %}checked{% endif %} />
                     <label class="" for="flexRadioDefault3">Food</label>
                   </div>
                   <div class="">
-                    <input class="" type="radio" name="on_type" id="RadioDefault4" value="clothes" {% if request.GET.on_type == 'bed' %}checked{% endif %} />
+                    <input class="" type="radio" name="on_type" id="RadioDefault4" value="clothes" {% if request.GET.on_type == 'clothes' %}checked{% endif %} />
                     <label class="" for="flexRadioDefault3">Clothes</label>
                   </div>
                   <div class="">
-                    <input class="" type="radio" name="on_type" id="RadioDefault5" value="beds" {% if request.GET.on_type == 'chair' %}checked{% endif %} />
+                    <input class="" type="radio" name="on_type" id="RadioDefault5" value="beds" {% if request.GET.on_type == 'beds' %}checked{% endif %} />
                     <label class="" for="flexRadioDefault3">Beds</label>
                   </div>
                   <div class="">
-                    <input class="" type="radio" name="on_type" id="RadioDefault6" value="vitamins" {% if request.GET.on_type == 'sofa' %}checked{% endif %} />
+                    <input class="" type="radio" name="on_type" id="RadioDefault6" value="vitamins" {% if request.GET.on_type == 'vitamins' %}checked{% endif %} />
                     <label class="" for="flexRadioDefault3">Vitamins</label>
                   </div>
                   <div class="">
-                    <input class="" type="radio" name="on_type" id="RadioDefault7" value="grooming" {% if request.GET.on_type == 'closet' %}checked{% endif %} />
+                    <input class="" type="radio" name="on_type" id="RadioDefault7" value="grooming" {% if request.GET.on_type == 'grooming' %}checked{% endif %} />
                     <label class="" for="flexRadioDefault3">Grooming</label>
                   </div>
                   <div class="">
-                    <input class="" type="radio" name="on_type" id="RadioDefault8" value="dry_food" {% if request.GET.on_type == 'other' %}checked{% endif %} />
-                    <label class="" for="flexRadioDefault3">Other</label>
+                    <input class="" type="radio" name="on_type" id="RadioDefault8" value="dry_food" {% if request.GET.on_type == 'dry_food' %}checked{% endif %} />
+                    <label class="" for="flexRadioDefault3">Dry Food</label>
                   </div>
 
                   
