--- a/sunline/wishlist/templates/wishlists/includes/included_wishlist.html
+++ b/sunline/wishlist/templates/wishlists/includes/included_wishlist.html
@@ -7,7 +7,7 @@
 <section class="wishlist">
   {% for wishlist in wishlists %}
 
-  <div class="">
+  <div class="wishlist__image">
     <img src="{{wishlist.product.image.url}}" alt="">
   </div>
 
