--- a/sunline/static/deps/css/style.css
+++ b/sunline/static/deps/css/style.css
@@ -142,7 +142,7 @@ body {
   transition: all .3s;
 }
 
-.menu__list-link--dropdown__products  {
+.menu__list-link--dropdown__products {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -517,11 +517,11 @@ body {
 }
 
 
-/* categories styles */
 
-.categories {}
 
-.categories__title {
+
+
+.benifits__title {
   margin: 88px 0 34px;
   font-family: Bubblegum Sans, cursive;
   font-size: 40px;
@@ -532,82 +532,35 @@ body {
   text-align: center;
 }
 
-.categories__items {
+.benifits__items {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  gap: 50px;
 }
 
-.categories__item {
+.benifits__item {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 40px 15px 35px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #dfdfdf;
+  border-radius: 4px;
 }
 
-.categories__item-image__link {
-  display: block;
-  padding: 20px;
-  border-radius: 100%;
-  max-width: 190px;
-  position: relative;
-  margin: 0 auto;
-  overflow: hidden;
-  margin-bottom: 22px;
-}
-
-.categories__item-image__link::before {
-  position: absolute;
-  content: "";
-  height: 100%;
-  width: 100%;
-  border: 20px solid #f7f7f7;
-  left: 0;
-  right: 0;
-  top: 0;
-  border-radius: 50%;
-  transition: .4s;
-  opacity: 1;
-  transform: scale(1);
-}
-
-.categories__item-image__link:hover::before {
-  position: absolute;
-  content: "";
-  height: 100%;
-  width: 100%;
-  border: 20px solid #F94073;
-  left: 0;
-  right: 0;
-  top: 0;
-  z-index: 1;
-  border-radius: 50%;
-  -webkit-transition: .7s;
-  transition: .7s;
-  transform: scale(1.3);
-  /* -webkit-transition: -webkit-transform .3s,opacity .4s;
-    -moz-transition: -moz-transform .3s,opacity .4s;
-    transition: transform .3s,opacity .4s; */
-  opacity: 0;
-}
-
-.categories__item-image {}
-
-.categories__item-title {
+.benifits__item-title {
   font-family: Bubblegum Sans, cursive;
   font-size: 22px;
+  line-height: 24px;
+  font-weight: 400;
   color: #2d3054;
 }
 
-.categories__item-title span {
-  display: block;
-  font-size: 16px;
-  text-align: center;
+.test {
+  display: flex;
 }
-
-
-/* ============= end categories styles========== */
-
-
 
 .selling {
   margin: 77px 0 35px;
@@ -639,6 +592,9 @@ body {
 
 .product__image {
   position: relative;
+  width: 250px;
+  height: 300px;
+  object-fit: cover;
 }
 
 
@@ -669,14 +625,16 @@ body {
 }
 
 .product_id {
-  font-size: 16px;
-  line-height: 18px;
+  color: #777;
+  font-size: 92.307%;
+  line-height: 21px;
   font-weight: 600;
-  color: #2d3054;
 }
 
-.product_id span{
-  font-weight: 300;
+.product_id span {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
 }
 
 .product__active {}
@@ -701,7 +659,7 @@ body {
   font-size: 21px;
   line-height: 22px;
   font-weight: 500;
-
+  color: #2d3054;
 }
 
 .product__price__container {
@@ -720,7 +678,39 @@ body {
 
 .product__old-price {}
 
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+}
 
+
+.selling__products--slider .slick-next,
+.selling__products--slider .slick-prev {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 5;
+  width: 40px;
+  height: 40px;
+  background-color: #2d3054;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  outline: none;
+  box-shadow: 0px 7px 20px 0px rgba(254, 62, 87, 0.3);
+}
+
+.selling__products--slider .slick-prev {
+  left: 40px;
+}
+
+.selling__products--slider .slick-next {
+  right: 40px;
+}
 
 .banner {
   margin: 77px 0 35px;
@@ -819,97 +809,13 @@ body {
   padding-bottom: 15px;
 }
 
-/* .featured-products__inner {
-  display: flex;
-} */
-
-.featured-products__tabs-container {
-  width: calc(25% - 15px);
-  margin-right: 30px;
-  background-color: #2d3054;
-  border-radius: 3px;
-  padding: 0;
-  margin-bottom: 22px;
-  max-height: 465px;
-}
-
-.featured-products__tabs-list {
-  padding: 20px;
-}
-
-.featured-products__tabs-list__item {
-  font-size: 22px;
-  line-height: 26px;
-  color: #fff;
-  font-family: Bubblegum Sans, cursive;
-  font-weight: 400;
-  padding: 13px 12px 13px 20px;
-  border-radius: 50px;
-  margin-bottom: 10px;
-  transition: .6s;
-}
-
-.featured-products__items {
-  width: calc(75% - 15px);
-}
-
 .featured-products__items {
   display: flex;
-}
-
-.featured-products__tabs-btn {
-  border: none;
-  background-color: inherit;
-  font-size: 22px;
-  line-height: 26px;
-  color: #fff;
-  font-family: Bubblegum Sans, cursive;
-  font-weight: 400;
-  padding: 13px 12px 13px 20px;
-  border-radius: 50px;
-  margin-bottom: 10px;
-  transition: all .3s;
-  cursor: pointer;
-}
-
-.featured-products__tabs-btn:hover {
-  display: inline-block;
-  padding: 13px 12px 13px 20px;
-  border-radius: 50px;
-  margin-bottom: 10px;
-  background-color: #F94073;
-  color: #fff;
-  border: none;
-  transition: .4s;
-}
-
-.featured-products__item {
-  /* display: flex;
-  align-items: center; */
+  justify-content: space-between;
+  align-items: center;
 }
 
 
-
-
-[aria-selected="true"] {
-  display: inline-block;
-  padding: 13px 12px 13px 20px;
-  border-radius: 50px;
-  margin-bottom: 10px;
-  background-color: #F94073;
-  color: #fff;
-  border: none;
-  transition: .4s;
-}
-
-
-.tabs-container {
-  display: flex;
-}
-
-/* .tabs__panels-item {
-  display: flex;
-} */
 
 
 .new-arrivals {
@@ -1490,6 +1396,40 @@ body {
 
 .single-product__inner {
   display: flex;
+}
+
+.single-product__info {
+  margin-bottom: 15px;
+}
+
+.single-product__id,
+.single-product__category {
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 600;
+  color: #777;
+}
+
+.single-product__category {
+  margin-bottom: 15px;
+}
+
+.single-product__id span,
+.single-product__category span {
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 400;
+}
+
+.single-product__shipping {
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 400;
+  color: #2d3054;
+}
+
+.single-product__descr {
+  margin-bottom: 20px;
 }
 
 .single-product__title {
@@ -2760,9 +2700,7 @@ body {
 
 
 
-.orders {
-
-}
+.orders {}
 
 .orders__cart-items {
   display: block;
@@ -2842,4 +2780,18 @@ body {
 
 .auth__sub-link__create {
   color: #F94073;
+}
+
+
+/* ======================wishlist====================== 
+==============================================
+========================================================
+========================================================*/
+
+.wishlist__image {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 396.923px;
+  height: 396.923px;
 }
